<?xml version="1.0" encoding="utf-8"?><PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >	<PreferenceCategory android:title="@string/graph_pref_title" >		<CheckBoxPreference			android:defaultValue="true"			android:key="pref_sync"			android:summary="@string/pref_points_sum"			android:title="@string/pref_points_title" />		<ListPreference			android:defaultValue="50"			android:dependency="pref_sync"			android:dialogTitle="@string/graph_points_title"			android:entries="@array/listArray"			android:entryValues="@array/listValues"			android:key="graph_points_title"			android:title="@string/graph_points_title" />        <ListPreference            android:defaultValue="1"            android:dependency="pref_sync"            android:dialogTitle="@string/graph_update_freq"            android:entries="@array/graphFreqStrings"            android:entryValues="@array/graphFreqValues"            android:summary="@string/graph_freq_summary"            android:key="graph_update_freq"            android:title="@string/graph_update_freq" />	</PreferenceCategory>    <PreferenceCategory android:title="@string/test_history_title" >        <ListPreference            android:defaultValue="50"            android:dialogTitle="@string/test_history_title"            android:summary="@string/test_history_summary"            android:entries="@array/historyArray"            android:entryValues="@array/historyValues"            android:key="test_history_title"            android:title="@string/test_history_title" />    </PreferenceCategory>	<PreferenceCategory android:title="Units" >		<ListPreference			android:defaultValue="1"			android:dialogTitle="@string/measurement_units"			android:entries="@array/unitArray"			android:entryValues="@array/unitValues"			android:key="units"			android:title="@string/measurement_units"			android:summary="@string/measurement_unit_sammary"/>	</PreferenceCategory></PreferenceScreen>